tutorial fixes on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -1028,10 +1028,6 @@ textarea::-webkit-scrollbar {
         z-index: 1001;
     }
 
-    .overlay {
-      background-color: transparent;
-      }
-  
     .logo {
       margin-left: 0;
     }
@@ -1039,8 +1035,8 @@ textarea::-webkit-scrollbar {
     .create-item-option {
       padding: 0px;
       position: fixed;
-    top: 80px !important; /* Override inline styles */
-    left: 50% !important; /* Override inline styles */
+      top: 80px !important;
+      left: 50% !important;
       transform: translateX(-50%);
       width: 90%;
     }
@@ -1065,6 +1061,16 @@ textarea::-webkit-scrollbar {
     border-radius: 12px 12px 0 0;
     max-width: 100%;
     z-index: 10001;
+    pointer-events: none;
+  }
+
+  .overlay{
+    pointer-events: none;
+    background-color: transparent;
+  }
+
+  .options-container, .tutorial-close-button, .tutorial-dont-show, .button {
+    pointer-events: auto;
   }
 
   .tutorial-message {
